# gitea-mirror-manager

./: .all-contributorsrc  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  lint.yaml  publish_docker.yaml
gitea_mirror_manager/: mirrors.py
